Clean up benchmarks